<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="guty.raul.myexpenses.ExpensesSettings"
    tools:showIn="@layout/expenses_activity_expenses_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/expenses_settings_title"
                android:textSize="17sp"
                android:textStyle="bold" />

        </FrameLayout>

        <EditText
            android:id="@+id/edFullname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/expenses_fullname"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/expenses_save"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            android:id="@+id/btnSaveCategories"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/expenses_circle_shape"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:backgroundTint="@color/colorPrimary"
        android:id="@+id/btnAddCategorie">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/expenses_add_icon" />

    </FrameLayout>

</RelativeLayout>
